--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 html, body, #root {
-    height: 100vh;
     display: flex;
     flex-direction: column;
     font-family: 'Racama', sans-serif;
+    overflow: visible;
 }
